# aoc-cli

./: .gitignore  pyproject.toml
src/aoc_cli/: aoc_api.py  config.py  main.py
