[project]
name = "aoc-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "d0ctr",email = "mr.den.vi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "markdownify (>=1.2.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "aoc_cli", from = "src"}]

[tool.poetry.scripts]
aoc-cli = "aoc_cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
